# willa

./: .dockerignore  .flake8  .gitignore  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  Dockerfile.prisma  LICENSE  README.rst  chainlit.md  docker-compose.ci.yml  docker-compose.yml  env.example  package-lock.json  prisma.config.ts  prompt.txt  pyproject.toml  requirements.txt  tsconfig.json  willa.sql
.chainlit/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  python-app.yml
models/: README.rst
prisma/: package.json
prompt_templates/: initial_prompt.txt  prompt_with_history.txt  ref_prompt.txt
public/: LICENSE  overrides.js
public/elements/: tind-refs.jsx
sql/: willa.sql
tests/e2e/: test_everything.py
tests/etl/: empty_search.xml  example_search.xml  parnell_kerby.json  parnell_kerby.xml  test_doc_proc.py  test_pipeline.py
tests/tind/: example_billups.xml  example_fetch_metadata.xml  example_file_metadata_error.json  example_file_metadata_multiple.json  example_file_metadata_single.json  example_for_pymarc.xml  example_no_records.xml  example_record.xml  example_search_id.json  setup_files.py  test_api.py  test_fetch.py  test_fetch_file_metadata.py  test_fetch_metadata.py  test_format_tind_context.py  test_format_validate_pymarc.py
willa/: __init__.py
willa/chatbot/: __init__.py  chatbot.py  cli.py  graph_manager.py
willa/config/: __init__.py  secrets.py
willa/errors/: __init__.py  auth.py  config.py  record.py  tind.py
willa/etl/: __init__.py  doc_proc.py  fetcher.py  pipeline.py
willa/lcvendor/: LICENSE.txt  __init__.py  lancedb.py  pypdf.py
willa/tind/: __init__.py  api.py  fetch.py  format_tind_context.py  format_validate_pymarc.py
willa/web/: __init__.py  app.py  cas_provider.py  inject_custom_auth.py
