[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "willa"
version = "0.0.1"
dependencies = [
    "asyncpg",
    "awscli-local",
    "boto3",
    "chainlit ~= 2.7.1",
    "lancedb",
    "langchain_aws",
    "langchain_core",
    "langchain_ollama",
    "langfuse",
    "langgraph",
    "langmem",
    "ollama ~= 0.5.1",
    "pymarc",
    "pypdf",
    "python-dotenv",
    "requests",
    "rich ~= 14.1",
]
requires-python = ">= 3.13"
authors = [
    {name = "Anna Wilcox"},
    {name = "David Zuckerman"},
    {name = "Jason Raitz"},
]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
test = [
    "langchain_core",
    "requests-mock",
]
lint = [
    "mypy ~= 1.17.1",
    "pydoclint ~= 0.6.10",
    "pylint ~= 3.3",
    "types-requests",
]
debug = [
    "debugpy",
]
dev = [
    "willa[test,debug]"
]

[project.scripts]
willa-cli = "willa.chatbot.cli:main"
willa-fetch = "willa.etl.fetcher:main"
willa-pipeline = "willa.etl.pipeline:run_pipeline"

[project.urls]
Repository = "https://github.com/BerkeleyLibrary/willa"
Issues = "https://github.com/BerkeleyLibrary/willa/issues"
Changelog = "https://github.com/BerkeleyLibrary/willa/blob/main/CHANGELOG.rst"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
# We can't enable disallow_untyped_calls because of PyMARC.
disallow_untyped_calls = false
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.setuptools]
py-modules = ["willa"]

[tool.pydoclint]
allow-init-docstring = true
skip-checking-raises = true
style = "sphinx"
